bug fixing #rocket-page-controls (display error on safari). --> new style

--- a/src/public/assets/rocket/theme/sass/rocket/_layout.scss
+++ b/src/public/assets/rocket/theme/sass/rocket/_layout.scss
@@ -156,8 +156,8 @@ h2 + .rocket-nav-group {
 #rocket-page-controls {
     border-top: 1px solid $color-gray-6;
     margin: $padding-base -($padding-base);
-    padding: $padding-base;
-    background: $color-gray-8;
+    padding: 0 $padding-base;
+    background: white;
     z-index: 100;
     @include clearfix();
     > ul > li {
@@ -202,7 +202,7 @@ section {
         bottom: 0;
         left: 0;
         right: 0;
-        padding: $padding-base $padding-base 0 30px;
+        padding: $padding-base 0 0;
         margin: 0;
         > ul {
             margin: 0;
@@ -340,7 +340,7 @@ section {
         position: fixed;
         top: 60px;
         left: 215px;
-        bottom: 50px;
+        bottom: 0;
         right: 0;
         overflow-y:scroll;
         overflow-x: hidden;
@@ -360,7 +360,8 @@ section {
 
     .rocket-page-controls,
     #rocket-page-controls {
-        left: 215px;
+        left: 245px;
+        right: 15px;
     }
 
     .rocket-contains-additional {
